fix vertical alignment in small header component

--- a/src/components/header/components/small-header/small-header.scss
+++ b/src/components/header/components/small-header/small-header.scss
@@ -2,6 +2,10 @@
 header-component .small .navbar {
     border-top: 5px solid #44bddf;
     background-color: #ffffff;
+    .logo {
+        width: 100%;
+        height: 110%;
+    }
     .logo img {
         cursor: pointer;
         display: block;
