--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,8 @@
 
 header-component {
     display: block;
+    width: 100%;
+    height: 100%;
     header {
         nav.navbar {
             padding: 0;
